# cargo-wsdeps

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  dependabot-automerge.yaml  release.yaml
src/: diff.rs  lib.rs  main.rs  show.rs
test-resources/aggressive-blocked/: Cargo.toml  diff.patch
test-resources/aggressive-blocked/crate1/: Cargo.toml
test-resources/aggressive-blocked/crate2/: Cargo.toml
test-resources/aggressive-merge/: Cargo.toml  diff.patch
test-resources/aggressive-path/: Cargo.toml  diff.patch
test-resources/alphabetical-insert/: Cargo.toml  diff.patch
test-resources/conflicting-versions/: diff.patch
test-resources/default-features/: diff.patch
test-resources/default-members-inherited/: Cargo.toml  diff.patch
test-resources/dev-build-deps/: Cargo.toml  diff.patch
test-resources/dotted-extras/: diff.patch
test-resources/feature-merge/: diff.patch
test-resources/mixed-deps/: Cargo.toml  diff.patch
test-resources/multi-member/: Cargo.toml  diff-dotted.patch  diff-p-crate1.patch  diff.patch
test-resources/no-shared-deps/: Cargo.toml  diff.patch
test-resources/no-ws-deps-table/: Cargo.toml  diff.patch
test-resources/path-deps/: Cargo.toml
test-resources/path-workspace-deps/: Cargo.toml
test-resources/renamed-deps/: diff.patch
test-resources/single-member/: Cargo.toml
test-resources/single-ref/: Cargo.toml
test-resources/stale-only/: Cargo.toml  diff.patch
test-resources/standalone/: Cargo.toml
tests/: diff.rs
(+30 files in other folders)
