[package]
name = "cargo-wsdeps"
description = "Cargo subcommand to manage dependencies in a workspace."
version = "0.1.0"
repository = "https://github.com/ecliptical/cargo-wsdeps"
edition = "2024"
authors = ["Peter Nehrer <pnehrer@eclipticalsoftware.com>"]
license = "MIT"

[dependencies]
anyhow = "1"
cargo_metadata = "0.19"
cargo_toml = "0.22"
clap = { version = "4", features = ["cargo"] }
clap-cargo = { version = "0.15", features = ["cargo_metadata"] }
patcher = "0.2"
pathdiff = { version = "0.2", features = ["camino"] }
toml_edit = "0.22"
jemallocator = { version = "0.5", optional = true }

[features]
jemalloc = ["jemallocator"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
